syntax = "proto3";

package myncer;

option go_package = "github.com/hansbala/myncer/proto/myncer;myncer_pb";

message User {
  // google/uuid generated UUID.
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;

  // golang.org/x/crypto/bcrypt generated hash of plaintext.
  string hashed_password = 5;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string greeting = 1;
}
